--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -54,6 +54,7 @@
 
     <build>
         <plugins>
+            <!-- Maven Shade Plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
@@ -76,7 +77,6 @@
             </plugin>
         </plugins>
     </build>
-
 
 
 </project>
