--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -54,7 +54,7 @@
 
     <build>
         <plugins>
-            <!-- Maven Shade Plugin -->
+            <!-- Maven Shade Plugin to build fat JAR -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
@@ -66,6 +66,7 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
+                            <finalName>app</finalName>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <mainClass>ChatServerMain</mainClass>
@@ -77,6 +78,5 @@
             </plugin>
         </plugins>
     </build>
-
 
 </project>
